# Vertifact-AI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: .env.example  config.py  main.py
backend/app/agents/: crossref_agent.py  factcheck_agent.py  linguistic_agent.py  smoke_agent.py
backend/app/db/: connection.py  seed_bias.py
backend/app/db/migrations/: 01_init_semantic_cache.sql
backend/app/scoring/: __init__.py  confidence.py  engine.py  weights.py
backend/app/services/: bias_lookup.py  cache.py  embedding.py  factcheck_api.py  search_api.py
backend/app/utils/: adk_helpers.py  generate_domain_mapping.py  text_processing.py
backend/tests/: test_bias_lookup.py  test_cache.py  test_crossref_agent.py  test_factcheck_agent.py  test_linguistic_agent.py  test_scoring_engine.py
data/AllSides/: domain_mapping.json
documents/: VeriFact_AI_Build_Order.md  VeriFact_AI_OpenSource_Stack_and_Eval_Framework.md  VeriFact_AI_PRD_v2.md  VeriFact_AI_TDD.md
