[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-adk>=2.1.0",
    "httpx>=0.28.1",
    "litellm>=1.87.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.1",
    "uvicorn>=0.48.0",
]
