[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-adk>=2.1.0",
    "httpx>=0.28.1",
    "litellm>=1.87.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "supabase>=2.30.1",
    "uvicorn>=0.48.0",
    "vadersentiment>=3.3.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "live: integration tests that hit live external APIs (deselected by default)",
]
addopts = "-m 'not live'"

